Fix more display of changes
